<resources>
    <string name="app_name">Futbolin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment_one">Hello blank fragment ONE</string>
    <string name="hello_blank_fragment_two">Hello blank fragment TWO</string>
    <string name="position">Posición</string>
    <string name="team">Equipo</string>
    <string name="points">Puntos</string>
    <string name="points_shorten">Ps</string>
    <string name="goalsdifference">DG</string>
    <string name="goal_keeping">Arq</string>
    <string name="jumping">Sal</string>
    <string name="defending">Def</string>
    <string name="tackling">Qui</string>
    <string name="speed">Vel</string>
    <string name="passing">Pas</string>
    <string name="dribbling">Gam</string>
    <string name="strength">Fue</string>
    <string name="precision">Pre</string>
    <string name="heading">Cab</string>
    <string name="trainning_notification_channel_id">trainning_notification_channel_id</string>
    <string name="main_activity_back_button">Si quieres salir, presiona una vez más el botón de atrás</string>
    <string name="locker_room_title">Vestuario</string>
    <string name="finances">Finanzas</string>
    <string name="players">Jugadores</string>
    <string name="market_title">Mercado de Pases</string>
    <string name="strategy">Estrategia</string>
    <string name="friendlies">Amistosos</string>
    <string name="tournaments">Torneos</string>
    <string name="shopping">Shopping</string>
    <string name="settings">Configuraciones</string>
    <string name="train_title">Entrenar</string>
    <string name="personal_trainer">Personal Trainer</string>
    <string name="not_enough_fulbos">No dispone de suficientes Fúlbos. Puede comprar en el Shopping</string>
    <string name="wait">Espere</string>
    <string name="loading_team_data">Cargando los datos del Equipo</string>
    <string name="error_try_again">Error intentándo conectar. Por favor, inténtelo más tarde.</string>
    <string name="player">Jugador</string>
    <string name="transfer_done_abv">Trans. Final.</string>
    <string name="tournament">Torneo</string>
    <string name="loading_strategies">Cargando estrategias</string>
    <string name="trainment">Entrenamiento</string>
    <string name="trainment_done_1">¡Es tu entreno número</string>
    <string name="trainment_done_2">! \\n Hoy tus jugadores ganaron</string>
    <string name="trainment_done_3">de experiencia y recuperaron</string>
    <string name="trainment_done_4">puntos de energía. \\n Vuelve a entrenar mañana para ganar</string>
    <string name="trainment_done_5">puntos más.</string>
    <string name="trainment_still_1">Aún faltan</string>
    <string name="trainment_still_2">horas para el siguiente entrenamiento.</string>
    <string name="following">Siguiendo</string>
    <string name="my_offers">Mis ofertas</string>
    <string name="live">Vivo</string>
    <string name="loading_notifications">Cargando notificaciones</string>
    <string name="trainment_lost_1"><![CDATA[Has perdido la racha de <strong>]]></string>
    <string name="trainment_lost_2"><![CDATA[</strong> ¿quieres usar <strong> 1 Fúlbo </strong> para mantenerla o iniciar una racha nueva?]]></string>
    <string name="error_name">Nombre del Equipo debe tener minimo 3 letras</string>
    <string name="error_short_name_min">Nombre Corto del Equipo debe tener minimo 3 letras</string>
    <string name="error_short_name_max">Nombre Corto del Equipo debe tener maximo 4 letras</string>
    <string name="error_stadium_name">Nombre del Estadio debe tener minimo 3 letras</string>
    <string name="error_shield">Escoge un Escudo para tu equipo.</string>
    <string name="error_email">El e-mail es incorrecto</string>
    <string name="error_password">La contraseña debe tener mínimo 6 caracteres</string>
    <string name="error_name_2">Debe escribir su nombre</string>
    <string name="error_surname">Debe escribir su apellido</string>
    <string name="error_password_do_not_match">Las contraseñas no coinciden</string>
    <string name="teams">Equipos</string>
    <string name="sparrings">Sparrings</string>
    <string name="match_time">Hora de Partido</string>
    <string name="match_time_2">Se está disputando el encuentro, no dejen de alentar.</string>
    <string name="loading_live_match">Cargando la partida... Si tu conexión no es buena puede tardar unos minutos. Sé paciente :)</string>
    <string name="date">Fecha</string>
    <string name="match_suporters">espectadores - recaudación:</string>
    <string name="loading_tournament_data">Cargando los datos del torneo</string>
    <string name="zone">(Zona</string>
    <string name="category_avb">Cat.</string>
    <string name="change_strategy_web">Revisa tu alineación desde la web!</string>
    <string name="all">Todos</string>
    <string name="goalkeepers">Arqueros</string>
    <string name="defensors">Defensores</string>
    <string name="midfielder">Centrocampistas</string>
    <string name="forwards">Atacantes</string>
    <string name="max_offer">Oferta máxima:</string>
    <string name="no_offer">SIN OFERTAS</string>
    <string name="free_player">Jugador Libre</string>
    <string name="loading_market_players">Cargando el mercado de Pases</string>
    <string name="loading_data_from">Cargando la información de</string>
    <string name="loading_finances_from_market">Cargando las finanzas del mercado...</string>
    <string name="loading_finances_from_your_team">Cargando las finanzas de tu equipo</string>
    <string name="heal_player">Tratar jugador</string>
    <string name="player_healed_sucessfully">Jugador tratado con éxito</string>
    <string name="healing_player_1">Si tratas al jugador</string>
    <string name="healing_player_2">ahora, recuperará</string>
    <string name="healing_player_3">fechas Cada jugador puede ser tratado una sóla vez por cada lesión. ¿Quieres tratar a</string>
    <string name="healing_player_4">por un Fúlbo?</string>
    <string name="years">años</string>
    <string name="buy_fulbos">Comprar Fúlbos</string>
    <string name="not_enough_fulbos_second_phrase_1">No tienes suficientes Fúlbos para realizar la compra.\\n</string>
    <string name="not_enough_fulbos_second_phrase_2">¿Quieres comprar más Fúlbos?</string>
    <string name="buy_more">Quieres comprar</string>
    <string name="buy_more_1">Quieres comprar</string>
    <string name="buy_more_2">por</string>
    <string name="shopping_successfully">Su compra ha sido realizada con éxito</string>
    <string name="visiting_team">Visitante</string>
    <string name="tournament_match">Partido de Torneo</string>
    <string name="in_15_mins">En 15 mins</string>
    <string name="in_15_mins_2">saldrá del mercado! Aún puedes pujar por él!</string>
    <string name="trainning_notification">Tu equipo te necesita, ya puedes entrenarlo</string>
    <string name="following_to">Siguiendo a</string>
    <string name="no_following">Dejando de seguir a</string>
    <string name="dialog_free_1">Liberar a</string>
    <string name="dialog_free_2">como transferiable</string>
    <string name="dialog_free_3">Para rescindir el contrato de</string>
    <string name="dialog_free_4">debe pagar una cláusula de</string>
    <string name="dialog_free_5">$, o puedes hacerlo utilizando 1 Fúlbo.\\n</string>
    <string name="dialog_free_6">Quieres liberar a</string>
    <string name="dialog_free_7">Fondos:</string>
    <string name="dialog_free_8">Fúlbos:</string>
    <string name="to_pay">Pagar</string>
    <string name="not_enough_funds">Tus fondos no son suficientes para liberar a</string>
    <string name="not_enough_fulbos_2_version">No tienes suficientes Fúlbos para realizar la compra.</string>
    <string name="buy_more_version_2">¿Quieres comprar más Fúlbos?</string>
    <string name="making_free_to">Liberando a</string>
    <string name="made_free_successfully">liberado con éxito.</string>
    <string name="improve_contract_1">Mejorar contrato de</string>
    <string name="improve_contract_2">Puedes incrementar el valor de venta de</string>
    <string name="improve_contract_3">hasta un valor de 1,500,000 $.\\n</string>
    <string name="improve_contract_4">Pero recuerda que el sueldo que deberás pagarle será el 1.5% de ése valor.</string>
    <string name="error_improve_contract">Valor debe estar entre (10,000$ y</string>
    <string name="stop_following">Dejar de seguir</string>
    <string name="start_following">Seguir</string>
    <string name="make_offer">Hacer oferta a</string>
    <string name="make_offer_1">Hacer una oferta por</string>
    <string name="make_offer_2">La oferta tiene que ser superior a</string>
    <string name="error_improve_contract_1">Valor debe estar entre</string>
    <string name="and" />
    <string name="value_between">Valor debe estar entre</string>
    <string name="making_offer">Haciendo oferta al jugador...</string>
    <string name="salary_improved">Salario mejorado con éxito.</string>
    <string name="error_verify_values">Error... Verifica los valores e intentalo más tarde</string>
    <string name="offer_made">Oferta realizada con éxito</string>
    <string name="finishing_to_follow">Completando Seguimiento al jugador</string>
    <string name="started_following_to">Ya sigues a</string>
    <string name="stoping_follow_player">Dejando de seguir al jugador</string>
    <string name="not_following_more_to">Has dejado de seguir a</string>
    <string name="spectators">espectadores</string>
    <string name="in">En</string>
    <string name="you_can_play_again">podrás jugar un nuevo amistoso contra este equipo</string>
    <string name="goals">Goles</string>
    <string name="possession">Posesión</string>
    <string name="shots">Disparos</string>
    <string name="substitutions">Cambios</string>
    <string name="cards">Tarjetas</string>
    <string name="notifications">Notificaciones</string>
    <string name="loading_notification">Cargando Notificación</string>
    <string name="messages">Mensajes</string>
    <string name="see_all">Ver Todos</string>
    <string name="value">Valor:</string>
    <string name="best_offer">Mejor oferta:</string>
    <string name="best_offer_no_offer">Mejor oferta: SIN OFERTAS</string>
    <string name="transfarable_untill">Transferible hasta el</string>
    <string name="make_an_offer">Ofertar</string>
    <string name="transfarable_players">Jugadores Transferibles</string>
    <string name="injured_players">Jugadores Lesionados</string>
    <string name="dates">fechas</string>
    <string name="improved_players">Jugadores Mejorados</string>
    <string name="players_to_retire">Jugadores Por Retirarse</string>
    <string name="close">Cerrar</string>
    <string name="dialog_stats_title">Estadisticas de Entrenamiento</string>
    <string name="dialog_stats_against">Estadísticas contra</string>
    <string name="dialog_stats_played">JUG</string>
    <string name="dialog_stats_won">GAN</string>
    <string name="dialog_stats_lost">PER</string>
    <string name="dialog_stats_draw">EMP</string>
    <string name="dialog_stats_goals_favor">GF</string>
    <string name="dialog_stats_goals_against">GC</string>
    <string name="dialog_stats_goals_difference">DG</string>
    <string name="dialog_stats_last_matches">Últimos partidos</string>
    <string name="dialog_stats_date">FECHA</string>
    <string name="dialog_stats_cod">COND.</string>
    <string name="dialog_stats_rest">RES.</string>
    <string name="dialog_stats_det">DET.</string>
    <string name="name_caps">NOMBRE</string>
    <string name="framgent_players_age">EDAD</string>
    <string name="stamina_short">ENE</string>
    <string name="average_shortt">MED</string>
    <string name="experience_short">Exp</string>
    <string name="logout">Salir</string>
</resources>