<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_borders"
    android:padding="17dp">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_margin="15dp"
        android:id="@+id/dialog_stats_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_stats_title"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/dialog_stats_agaisnt_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />
    <TextView
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/dialog_stats_agaisnt_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_stats_against"
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_stats_title_label"
        app:layout_constraintBottom_toTopOf="@+id/dialog_stats_against_table"/>
    <TableLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_margin="15dp"
        android:stretchColumns="*"
        android:id="@+id/dialog_stats_against_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_stats_agaisnt_label"
        app:layout_constraintBottom_toTopOf="@+id/dialog_stats_last_matches_label">
        <TableRow android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   "
                android:background="#333333"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_stats_played"
            android:background="#333333"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_stats_won"
            android:background="#333333"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_stats_draw"
            android:background="#333333"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_stats_lost"
            android:background="#333333"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_stats_goals_favor"
                android:background="#333333"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_stats_goals_against"
                android:background="#333333"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_stats_goals_difference"
            android:background="#333333"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/dialog_stats_last_matches_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_stats_last_matches"
        android:textStyle="bold"
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_stats_against_table"
        app:layout_constraintBottom_toTopOf="@+id/dialog_stats_last_matches_table"/>
    <TableLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_margin="15dp"
        android:stretchColumns="*"
        android:id="@+id/dialog_stats_last_matches_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dialog_stats_last_matches_label"
        app:layout_constraintBottom_toTopOf="@+id/dialog_stats_close_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TableRow android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_stats_date"
                android:background="#333333"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_stats_cod"
            android:background="#333333"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_stats_rest"
            android:background="#333333"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_stats_det"
            android:background="#333333"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        </TableRow>
    </TableLayout>
    <Button
        android:layout_margin="15dp"
        android:id="@+id/dialog_stats_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/futbolinAzul"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:text="@string/close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_stats_last_matches_table"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>