<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Spinner
        android:textColor="@android:color/white"
        android:layout_gravity="left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/fragment_players_button_show_hide"
        app:layout_constraintBottom_toTopOf="@+id/fragment_players_guideline"
        android:id="@+id/fragment_players_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        app:layout_constraintLeft_toRightOf="@+id/fragment_players_spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fragment_players_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/see_all"
        android:layout_marginBottom="10dp"
        android:id="@+id/fragment_players_button_show_hide"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_players_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />
    <ScrollView
        android:id="@+id/fragment_players_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_players_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
<TableLayout
   android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/fragment_players_table"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="20dp"
    android:paddingBottom="5dp"
    android:stretchColumns="*"
    >
    <TableRow
        android:id="@+id/fragment_players_table_header_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="header"
        android:background="@drawable/tablelayout_border">

        <TextView android:text="#"
            android:clickable="true"
            android:onClick="onClickFragmentPlayer"
            android:focusable="true"
            android:tag="header_number"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:layout_column="0"/>
        <TextView android:text="@string/name_caps"
            android:clickable="true"
            android:tag="header_name"
            android:onClick="onClickFragmentPlayer"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="12dp"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:layout_width="wrap_content"
            android:layout_column="1"/>

        <TextView android:text="@string/framgent_players_age"
            android:tag="header_age"
            android:textSize="12dp"
            android:clickable="true"
            android:textAlignment="center"
            android:onClick="onClickFragmentPlayer"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:layout_width="wrap_content"
            android:layout_column="2"/>
        <TextView android:text="POS"
            android:textSize="12dp"
            android:clickable="true"
            android:onClick="onClickFragmentPlayer"
            android:tag="header_position"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="3"/>
        <TextView android:text="@string/stamina_short"
            android:textSize="12dp"
            android:clickable="true"
            android:onClick="onClickFragmentPlayer"
            android:tag="header_stamina"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="4"/>
        <TextView android:text="@string/average_shortt"
            android:textSize="12dp"
            android:clickable="true"
            android:onClick="onClickFragmentPlayer"
            android:tag="header_average"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="5"/>
        <TextView
            android:tag="hide"
            android:text="@string/goal_keeping"
            android:textSize="11dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="6"/>
        <TextView android:text="@string/defending"
            android:textAlignment="center"
            android:tag="hide"
            android:textSize="11dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="7"/>
        <TextView android:text="@string/dribbling"
            android:tag="hide"
            android:textAlignment="center"
            android:textSize="11dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="8"/>
        <TextView android:text="@string/heading"
            android:tag="hide"
            android:textAlignment="center"
            android:textSize="11dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="9"/>
        <TextView android:text="@string/jumping"
            android:tag="hide"
            android:textAlignment="center"
            android:textSize="11dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="10"/>
        <TextView android:text="@string/passing"
            android:tag="hide"
            android:textAlignment="center"
            android:textSize="11dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="11"/>
        <TextView android:text="@string/precision"
            android:tag="hide"
            android:textAlignment="center"
            android:textSize="11dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="12"/>
        <TextView android:text="@string/speed"
            android:tag="hide"
            android:textAlignment="center"
            android:textSize="11dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="13"/>
        <TextView android:text="@string/strength"
            android:tag="hide"
            android:textAlignment="center"
            android:textSize="11dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="2"/>
        <TextView android:text="@string/tackling"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:tag="hide"
            android:textSize="11dp"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="14"/>
        <TextView android:text="@string/experience_short"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:tag="hide"
            android:textSize="11dp"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@drawable/tablelayout_border"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_column="15"/>



    </TableRow>
</TableLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>